49
================

15/11/24 mobile photo uploader: gallery can upload multiple images #1564
13/11/24 Emblem to indicate animal is future intake
13/11/24 MyPet: fix date format and address fields
11/11/24 Fix animal observations to use a delimiter with fewer collisions ^^
11/11/24 Some share links broken with extra &
08/11/24 Optimise get_animal_data when calling animalview through the service
06/11/24 Fix adoption coordinator not updating from bulk change animal
06/11/24 New microchip registry "MyPet" for UK and NI
05/11/24 Disable deprecated mobile UI
05/11/24 Refactory querybuilder into a separate js file for maintainability
04/11/24 Add locale for Egypt
04/11/24 Fix bug with adoption coordinator not being set from add animal
04/11/24 Show rabies info in banner #1561
01/11/24 Refactor calendarview, csvexport, change_password #1103
01/11/24 FindPet: Record separately when a found report is made #1500
31/10/24 Force movementtypes > 8 to be unadoptable
30/10/24 Prevent SQLite paths breaking file DBFS storage #1559
30/10/24 Place a hard limit of >250 microchips to register in one go
29/10/24 Accidentally removed tattoo/chip date fields from animal_new #1103
25/10/24 New location filters "All Dogs", "All Cats" 
24/10/24 FindPet: Validate we didn't get an error in the report_id
24/10/24 Refactor bulk change animals #1103
23/10/24 Querybuilder: Option to output date of last medical profile
23/10/24 Currency fields should reformat when they lose the focus #1103
22/10/24 Prevent time part of datebroughtin messing up days on shelter calc
22/10/24 When generating Excel sheets, filter out illegal chars
21/10/24 Add "Left Shelter" criteria to querybuilder
20/10/24 Refactor additional fields to use tableform widgets #1103
18/10/24 FindPet: call cancel/transfer-back when registrations fail
17/10/24 When updating flag names via lookups, add a pipe to prevent collisions
16/10/24 Add new showif operand for partial matches (asterisk)
15/10/24 Refactor add animal #1103